gitops/fluxcd/kubernetes/base/kyverno/portefaix/portefaix-policy-p0001.yaml
# Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: portefaix-project-p0006
  annotations:
    policies.kyverno.io/title: Add safe to evict
    policies.kyverno.io/category: Workload Management
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.4.3
    policies.kyverno.io/description: >-
      The Kubernetes cluster autoscaler does not evict pods that
      use hostPath or emptyDir volumes. To allow eviction of these pods, the annotation
      cluster-autoscaler.kubernetes.io/safe-to-evict=true must be added to the pods.
    a8r.io/description: Kyverno policies for Portefaix
    a8r.io/owner: portefaix
    a8r.io/bugs: https://github.com/portefaix/portefaix/issues
    a8r.io/documentation: https://github.com/portefaix/portefaix
    a8r.io/repository: https://github.com/portefaix/portefaix
    a8r.io/support: https://github.com/portefaix/portefaix/issues
spec:
  rules:
  - name: annotate-empty-dir
    match:
      resources:
        kinds:
        - Pod
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
        spec:
          volumes:
          - <(emptyDir): {}
  - name: annotate-host-path
    match:
      resources:
        kinds:
        - Pod
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
        spec:
          volumes:
          - hostPath:
              <(path): "*"
